--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     <form id="loginForm">
       <form id="loginForm" autocomplete="off"> 
       <label for="name">Name:</label>
-      <input type="text" id="name" autocomplete="off" required><br><br>
+      <input type="text" id="loginName" autocomplete="off" required><br><br>
       <label for="password">Password:</label>
-      <input type="password" id="password" autocomplete="off" required><br><br>
+      <input type="password" id="loginPassword" autocomplete="off" required><br><br>
       <button type="submit">Login</button>
     </form>
   
